tests/snapshots/assets__check_file@unit-destruction.typ-120.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/destruction.typ
snapshot_kind: text
---
#let (n, ..) = layout-node(node, 0, ctx)

#grid(
  columns: (1fr,) * calc.min(3, authors.len()),
  gutter: 1em,
  ..authors.map(author => align(center, text(font: author-font, author))),
)

#let books = (
  Shakespeare: "Hamlet",
  Homer: ("The Odyssey", "The Iliad"),
  Austen: "Persuasion",
)

#let (Austen,) = books
Austen wrote #Austen.

#let (Homer: h) = books
Homer wrote #h.

#let (a, b: (.., d), ..c) = (a: 1, b: (c: 4, d: 5))
#let (a,) = (a: 1, b: (c: 4, d: 5))
#let (..) = (a: 1, b: (c: 4, d: 5))
