tests/snapshots/assets__check_file@unit-escape.typ-0.snap
---
source: tests/src/unit.rs
input_file: tests/fixtures/unit/escape.typ
snapshot_kind: text
---
I got an ice cream for
\$1.50! \u{1f600}
