tests/snapshots/assets__check_file@unit-func-func_call.typ-0.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/func/func_call.typ
snapshot_kind: text
---
#text[123]

#text()[123]

#text(weight: "bold")[123]

#table()[123][456]

#table[123][456]

#link("http://example.com")[test]

#let f = (
  ..args,
) => (
  args
)
#f({
  "aaaaaaaaaaaaaaaaaaaaa"
})
#f((
  (),
))

#f({ })
#f(`xx
`)
#f(```aa
```)
#f(())
#pad(left: 1em)[```typ

  ```]
